bug solved, floating point enable/disable

--- a/ports/minimal/.vscode/settings.json
+++ b/ports/minimal/.vscode/settings.json
@@ -14,7 +14,8 @@
         "string_view": "c",
         "initializer_list": "c",
         "ranges": "c",
-        "random": "c"
+        "random": "c",
+        "functional": "c"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
