module in minimal is updated

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "files.associations": {
         "*.xc": "cpp",
         "stdarg.h": "c",
-        "mpconfigboard_common.h": "c"
+        "mpconfigboard_common.h": "c",
+        "mphalport.h": "c",
+        "timer.h": "c"
     }
 }
