--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
         "stdarg.h": "c",
         "mpconfigboard_common.h": "c",
         "mphalport.h": "c",
-        "timer.h": "c"
-    }
+        "timer.h": "c",
+        "pin.h": "c"
+    },
+    "cmake.sourceDirectory": "${workspaceFolder}/lib/mbedtls/programs/test"
 }
